--- a/public/404.html
+++ b/public/404.html
@@ -24,7 +24,7 @@
 <link rel="canonical" href="http://localhost:1313/404.html">
 <link rel="stylesheet" href="/book.min.2d7fec8e866046a7460a1cc86027535586803606a87c87da3098bcd8d5a2b62d.css" integrity="sha256-LX/sjoZgRqdGChzIYCdTVYaANgaofIfaMJi82NWiti0=" crossorigin="anonymous">
   <script defer src="/fuse.min.js"></script>
-  <script defer src="/en.search.min.6efddb1adf4ee9e2497dad7264e217443bc04e6aeaaf323a07b774700756d65f.js" integrity="sha256-bv3bGt9O6eJJfa1yZOIXRDvATmrqrzI6B7d0cAdW1l8=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.e9db6a9f1960250a6b9e5544e088165c5c2b7d1f48bdafb7db5097b4d0bc0d64.js" integrity="sha256-6dtqnxlgJQprnlVE4IgWXFwrfR9Iva&#43;321CXtNC8DWQ=" crossorigin="anonymous"></script>
 
   <script defer src="/sw.min.6f6f90fcb8eb1c49ec389838e6b801d0de19430b8e516902f8d75c3c8bd98739.js" integrity="sha256-b2&#43;Q/LjrHEnsOJg45rgB0N4ZQwuOUWkC&#43;NdcPIvZhzk=" crossorigin="anonymous"></script>
 <!--
